@@ -7,6 +7,7 @@ v1.05 ()
     [+] Show some information on the selected tracks in the status bar
     [-] Skips two songs when one is not found (#581654)
     [-] Fixed crash in some rare occasions when trying to set the cover for the current track
+    [-] Gnome media keys no longer working when starting/closing multiple instances
     [ ] The playbin2 GStreamer component is now used by default (use the --playbin flag to use the old playbin component)
     [ ] Close properly on CTRL-C
 
